# suraimu-engine

./: BUILDING.md  CMakeLists.txt  README.md
cmake/: FindLog4cxx.cmake
libsuraimuengine/: CMakeLists.txt
libsuraimuengine/include/libsuraimuengine/: defaults.h  game.h  libsuraimuengine.h
libsuraimuengine/src/: game.cpp
tests/: CMakeLists.txt
tests/src/game/: gametest.cpp
